azn added .ico icon

--- a/ClockApp/Main.resx
+++ b/ClockApp/Main.resx
@@ -197,4 +197,28 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>27</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAD+/////v7+/7XaqP+bzIb/9frz////////////////////////////////////////////////////
+        ///+/////v/////////h8Nv/jcV2/9bqzf//////////////////////////////////////////////
+        //////////////7//////////P37/6vUmf+n0ZL/+vz5//////////////////////////////////v8
+        +f/y9+v//P36///////+///////////////a7NP/j8V1/9/u1///////////////////////////////
+        ///R4rj/tc+L//b58f///////v//////////////+fz4/6XQj/+z1p7//f78////////////////////
+        ///1+fD/qcl7/8rdrf////////////7////////////////////S58f/ksV2/+fy4P//////////////
+        ////////1uXC/6PFcv/u9OT////////////+////////////////////9vrz/5/Mhf+82qj/7fXo/+Tv
+        2v/l8Nv/5O7Y/6zLg//A2KD//v/+/////////////v/////////////////////////L473/m8l+/8Ld
+        r/+dx3r/oMd5/5zDcP+dwm3/5/Db//////////////////7/////////////////////////8vju/5zJ
+        f//F3rL/7PTl/+jx3v+szYb/t9OV//3+/P/////////////////+////////////////////////////
+        ///E3rL/ocqC//f69P/m8Nz/nsRy/9/s0f///////////////////////v//////////////////////
+        ////////7PXm/5rGeP/T5sT/vdii/63Oif/6/Pf///////////////////////7/////////////////
+        /////////////////v+92qf/n8h8/53Fdf/W58X////////////////////////////+////////////
+        ////////////////////////5/Lf/5bCb/+my4L/9vny/////////////////////////////v//////
+        //////////////////////////////3+/P+31Zz/zOG4//////////////////////////////////7/
+        ////////////////////////////////////////6PLf/+/26v//////////////////////////////
+        ///9/////v////7////+/////v////7////+/////v////z+/f/9/v7//v////7////+/////v////7/
+        ///+////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
