--- a/ClockApp/CertificateInput.resx
+++ b/ClockApp/CertificateInput.resx
@@ -185,6 +185,9 @@
         GZdx6Rh0WZd2eZfUkJd6uZd5CQh++ZeAGZiAwAlKiH6GuREBAQA7
 </value>
   </data>
+  <metadata name="SaveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
